--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,13 @@
 
     <script type="module" src="./src/main.jsx" defer></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <title>RocketNotes</title>
   </head>
