--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <title>RocketNotes</title>
   </head>
 
